--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="search_term">search term: </string>
     <string name="search_term_hint">please enter search term</string>
     <string name="search_location">search location: </string>
-    <string name="search_location_hint">optional: please enter a location</string>
+    <string name="search_location_hint">please enter a location</string>
     <string name="search_sort">sort by: </string>
     <string name="sort_option">choose a sort option</string>
     <string name="search_button">search</string>
@@ -17,5 +17,9 @@
 
     <string name="restaurant_name">Restaurant name: </string>
     <string name="restaurant_location">Restaurant location: </string>
+    <string name="restaurant_phone">Phone number: </string>
+    <string name="restaurant_review">Review: </string>
+
+    <string name="back">back</string>
 
 </resources>
